edits to correct indendation, modularity, spacing and structure.

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,15 +3,17 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
+
 html {
   box-sizing: border-box;
-}
+};
+
 *, *:before, *:after {
   box-sizing: inherit;
-}
+};
 
 /*
- * Global layout stuff
+ * Layout
  */
 
 body {
@@ -19,15 +21,15 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: "Source Sans Pro", sans-serif;
-}
+};
 
 .container {
   top: 120px;
-}
+};
 
 #tweets-container {
   width: 95%;
-}
+};
 
 .tweet-container {
   width: 100%;
@@ -36,7 +38,7 @@ body {
   flex-direction: column;
   border: 2px solid;
   margin-top: 75px;
-}
+};
 
 .tweet-container > header {     /* parent > child */
   width: 100%;
@@ -44,12 +46,12 @@ body {
   flex-direction: row;
   justify-content: space-between;
   height: 2em;
-}
+};
 
 .tweet-body {
   width: 100%;
   padding: 2em 0;
-}
+};
 
 .tweet-container > footer {     /* parent > child */
   width: 100%;
@@ -58,70 +60,26 @@ body {
   justify-content: space-between;
   border-top: 4px solid #63542d80;
   padding-top: 1em;
-}
+};
 
 .tweet-container:hover {
   box-shadow:0.5em 0.5em #63542d80;
-}
+};
 
 .fas fa-flag-checkered:hover, .fas fa-retweet:hover, .far fa-heart:hover {
   color: #63542d80;
-}
+};
 
 
 
 
 
- /* Tablet Styles */
+ 
  @media only screen and (min-width: 768px) {
-  body {
-    display: flex;
-    
-  }
-  /* .main-page-header {
-    width: 33.3%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    body {
+      display: flex;
+    }
   };
-      
-    .container {
-      margin-right: 20px;
-      flex: 1 1 100%;
-      width: 50%;
-      margin-top: 10em;
-  }; */
 
- };
 
-/* 
-  Tablet Styles 
-@media only screen and (min-width: 768px) {
-  .header-container {
-    padding-top: 130px;
-    display: flex;
-    flex-direction: row;
-  }
-  .container {
-    margin-right: 20px;
-    flex: 1 1 100%;
-    width: 50%;
-  }
-}
-
-Desktop styles 
-@media only screen and (min-width: 1024px) {
-  .header-container {
-    padding-top: 130px;
-    display: flex;
-    flex-direction: row;
-  }
-  .container {
-    margin-right: 20px;
-    flex: 1 1 50%;
-    width: 50%;
-  }
-}
-
- */
 
