--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -1,5 +1,3 @@
-
-
 nav {
   height: 120px;
   background-color: #3866e6;
@@ -12,67 +10,25 @@ nav {
   position: fixed; /* 4 different postions. Need a position to go with z index. Default is static. For z index to be functional, need to set to one of the 3 that are not static. */
   top: 0;
   width: 100%;
-}
+};
 
 .logo {
 font-family: "Bungee", sans-serif;
 font-size: 5vw;
-}
+};
 
 .nav-quick-tweet {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center
-}
+};
 
 .nav-quick-tweet p {
   margin: 0;
-}
+};
 
 .arrow {
   color: red;
-}
+};
 
-/*
-position
-top
-width
-
-nav {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  position:fixed;
-  top: 0;
-  align-items: end;
-  height: 120px;
-  width:100%;
-  background-color:#4056A1;
-  color: #FFFFFF;
-  padding: .5em 1.5em;
-  z-index: 10;
-}
-
-nav span {
-  font-family: "Bungee", sans-serif;
-  align-self: flex-end;
-}
-
-.new_tweet {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-
-   <nav>
-      <span class="logo">TWEETER</span>
-      <div class="new_tweet">
-        <div class="directions"><b>Write </b> a new tweet</div>
-        <div<i class="fa-solid fa-angles-down"></i></div>
-      </div>
-    </nav>
-
-
-    */
