--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,16 +1,3 @@
-/* main {
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
-  padding: 2em;
-  background-color: #f3f1ed;
-} */
-
-
 .container {
   margin: 0 auto;
   width: 100%;
@@ -21,7 +8,7 @@
   position: relative;
   padding: 2em;
   background-color: #f3f1ed;
-}
+};
 
 .new-tweet {
   width: 100%;
@@ -29,33 +16,33 @@
   flex-direction: column;
   align-items: center;
   padding: 2em;
-}
+};
 
 form {
   width: 100%;
   display: flex;
   flex-direction: column;
-}
+};
 
 label {
   font-weight: bold;
-}
+};
 
 textarea {
   border: none;
   border-bottom: 4px solid black;
   width: 100%;
   background-color: #f3f1ed;
-}
+};
 
 .button-counter {
   display: flex;
   justify-content: space-between;
   margin-top: 15px;
   font-family: "Bungee", sans-serif;
-}
+};
 
 .button-counter button {
   background-color:#4056a1;
   color: white;
-}
+};
